# ProjectPersistenceSentinel

./: .gitignore  README.md  Solution.md  colab_train_bridge.py  main.py  pyproject.toml  requirements.txt  setup.sh  train_pipeline.py
ASM/: .gitignore  requirements.txt  video_preprocessor.py
GVE/: __init__.py  dashboard.py  metrics.py  submission_exporter.py
LH/: check_sync.py  integration_test.py  train.py  visualize.py
data/dataset/test/video_5/: video_5.txt
data/dataset/train/video_1/: video_1.txt
data/dataset/train/video_2/: video_2.txt
data/dataset/train/video_3/: video_3.txt
data/dataset/train/video_4/: video_4.txt
legacy_modules/ASM/: test_preprocessor.py
legacy_modules/GVE/: demo_dashboard.html  mask_refiner.py  mock_generator.py  run_demo.py  threshold_tuner.py
legacy_modules/JM/: temporal_engine.py
legacy_modules/LH/: create_masks.py  final_pipeline.py  model.py
pcdl/: __init__.py  pipeline.py
pcdl/io/: __init__.py  dataset.py  video_preprocessor.py
pcdl/postprocess/: __init__.py  mask_refiner.py  metrics.py  submission_exporter.py
pcdl/spatial/: __init__.py  model.py
pcdl/temporal/: __init__.py  engine.py
tests/: create_test_image.py  test_integration.py
tools/: extract_dataset.py
